<resources>
    <string name="app_name">MindHelper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="poruchy">Poruchy</string>
    <string name="dep">Deprese</string>
    <string name="dep_text">Velmi široký pojem, který popisuje široké spektrum psychických potíží. Mezi běžné patří ztráta nálady a fyzických sil</string>
    <string name="dep_priznaky_text">Skleslost, poruchy spánku, pokles energie, snížené seběvědomí, pocity méněcennosti</string>
    <string name="dep_lecba_text">Pro léčbu deprese je nejdříve důležitá diagnostická konzultace pro zjištění druhu depresivní poruchy. Většina z nich řeší psychoterapie, na které se využívají různé metody, nejčastěji kognitivně-behaviorální. K léčbě se také používají antidepresiva.</string>
    <string name="anx">Úzkostné poruchy</string>
    <string name="anx_text">Nejběžnější skupina duševních poruch, mezi které patří například fóbie, panická porucha a generalizovaná úzkostná porucha (ataka). Fóbie je strach z konkrétního objektu, který vyvolává pocit úzkosti. Nejčastějším příkladem je strach z výšek, uzavřených prostor či konkrétních zvířat. Problémovější typ fóbie je sociální, která komplikuje navázání vztahů a kontaků. Panická ataka se projevuje narozdíl od fóbie i fyzicky. Vzniká převážně v souvislosti se strachem o svůj život. Generalizovaná úzkost je pak strachem o své blízké.</string>
    <string name="anx_priznaky_text"><b>Fóbie</b>: úzkost, strach, ochromení\n<b>Panická porucha</b>: silné bušení srdce, potíže s dechem, pocity na omdlení\n<b>Generalizovaná úzkost</b>: třes, pocení, žaludeční nevolnosti </string>
    <string name="anx_lecba_text">V případě výskytu problémů je nutné, aby se člověk uvolnil. Většina fyzických projevů jde překonat pomocí efektivních dechových a svalových cvičení. Také pomahají terapie, například kognitivně-behaviorální či expoziční. Na podporu také pomáhají léky na úzkost.</string>
    <string name="ed">Poruchy přijmu potravy</string>
    <string name="ed_text">Tímto termínem se označuje soubor duševních poruch, pro které je typická neschopnost přijímat potravu v přiměřeném množství. Jsou tři druhy: (mentální) anorexie, bulimie a záchvatovité přejídání. V případě anorexie se jedná o výrazné omezení konzumovaného jídla a dělání všeho pro to, aby si nemocný člověk udržel podváhu. Bulimie se naopak vyznačuje přejídáním ve velmi krátké době a následným odčinováním tohoto výkonu. Záchvatovité přejídání je podobně jako bulimie konzumování velkého množství jídla v krátké době, ale bez kompenzačních opatření.</string>
    <string name="ed_priznaky_text"><b>Anorexie</b>: přísné odpírání jídla, bledá pleť, bolesti hlavy, nošení volného obleční pro zakrytí postavy\n<b>Bulimie</b>: záchvaty přejídání následovány pocitem strachu z tloušťky a snahou kompenzace\n<b>Záchvatovité přejídání</b>: Konzumace velkého množství jídla i v případě plnosti, po záchvatu nepříjemné pocity z přejedení</string>
    <string name="ed_lecba_text">Jako s většinou psychických poruch je základní léčba formou terapie, ať už je to kogntivně-behaviorální, interpersonální, či rodinná. Člověka s poruchou příjmu potravy je nutné motivovat k lepším straovacím návykům.</string>
    <string name="ptsd">PTSD</string>
    <string name="ptsd_text">Je to opožděná nebo prodloužená reakce na velkou zátěž či ohrožení. Mezi běžné příklady bývají zážitky z války, přírodní katastrofy, či traumatické zkušenost (znásilnění).</string>
    <string name="ptsd_priznaky_text">Zneklidňující myšlenky nebo vzpomínky na událost objevující se proti vůli člověka, sny o nich, chování nebo pocit jako při odehrávání události, zvýšená nervozita při vzpomínce na událost</string>
    <string name="ptsd_lecba_text">U některých lidí dojde ke spontánnímu zlepšení samo od sebe, porucha může časem vymizet. Někdy je ale léčba nutná. Při léčbě jsou hlavní dvě možnosti: psychoterapie a farmakoterapie, obvykle kombinace obou zmíněných. Také hraje velkou roli podpora širšího okruhu lidí.</string>
    <string name="schizo">Schizofrenie</string>
    <string name="schizo_text">Jedná se o jednu z psychotických poruch, která narušuje schopnost nemocného fungovat v běžném životě. Je epizodická, což znamená, že se u pacientů střídá klidnější období nemoci střídá s psychickou krizí. Vzniká nejčastěji na základě vrozené genetické predispozice.</string>
    <string name="schizo_priznaky_text">poruchy myšlení (bludy), poruchy vnímání (halucinace), poruchy jednání, snížená schopnost vnímat emoce</string>
    <string name="schizo_lecba_text">Záleží na formě a jak brzy se pacient začne léčit. V některých případech se jedná o chornickou formu, léčba však může aspoň zmírňovat projevy. Léčba je formou nasazení antipsychotik, které potlačují činnost dopaminových receptorů a neurotransmitery.</string>
    <string name="bpd">Bipolární porucha</string>
    <string name="bpd_text">Jedná se o závažné duševní onemocnění, při kterém dochází k preiodickým změnám nálady, psychických funkcí a normálního fungování organismu. Střídají se po cyklech objevujících se ve čtyři různé druhy období, které jsou rozděleny dle typů a intenzity příznaků. Tyto období jsou hypomanické, manické, depresivní a smíšené.</string>
    <string name="bpd_priznaky_text"><b>Hypomanické období</b>: Chronicky dobrá nálada, nadměrné množství energie, velká hovornost a snadná návaznost kontaktů s ostatními\n<b>Manické období</b>: Nepřiměřeně dobrá nálada, markantně zvýšená aktivita, velké sebevědomí a síla, agresivní a nepřiměřené jednání při narušení jeho projevu\n<b>Depresivní období</b>: Pokles nálady, snížení energie a životní aktivity, poruchy spánku, snížené sebevědomí\n<b>Smíšené období</b>: Kombinace výše zmíněných příznaků\n</string>
    <string name="bpd_lecba_text">Léčba musí být zahájena včas a správně nasměrována, aby došlo ke zlepšení stavu. Při léčbě manických období se doporučují hlavní tři léky: antidepresiva, antipsychotika a stabilizátory nálady (někdy i na spaní, úzkost, neklid). Depresivní se zas léčí antidepresivy. Někdy se také k léčbě používá elektrokonvulsivní terapie.</string>
    <string name="person">Poruchy Osobnosti</string>
    <string name="person_text">Vztahují se k určitým osobnostním rysům lidí. Existuje velmi mnoho druhů poruch osobností, řadí se do tzv. klastrů. Klastr A obsahuje například paranoidní, schizoidní a schizotypální poruchu osobnosti. V Klastru B najdeme emočně nestabilní, narcistickou, disociální a historinskou. Klastr C má vyhývavou, anankastickou (také se ji řiká obsedantně-kompulzivní), závislou a pasivně agresivní. Tyto poruchy mohou být také smíšené.\n</string>
    <string name="person_priznaky_text"><b>Klastr A</b>\n<b>Paranoidní</b>: Velmi nedůvěřivý, urážlivý a vztahovačný, je hádavý a citlivý na překračování určitých hranic (vniknutí do soukromí)\n<b>Schizoidní</b>: Samotářský, lhostejný vůči ostatním, skrytá touha po uznání\n<b>Shizotypální</b>: Těžkopádné vyjadřování, neumí vyjádřit své pocity, stažený sám do sebe\n<b>Klastr B</b>\n<b>Emočně nestabilní</b>: Sklony k nečekanému jednání bez ohledu na následky, tíhne k hádkám (především při bránění impulzivnímu chování), výkyvy nálad\n<b>Narcistická</b>: Snížená schopnost přijímat kritiku, velké sebevědomí, silné nutkání být středem pozornosti\n<b>Historinská</b>: Sklon k dramatickým výstupům, nechá se snadno ovlivnit ostatními, vyhledává aktivity, kde může být středem pozornosti\n<b>Disociální</b>: Ignoruje sociální pravidla, nemá pocit viny, sklony k násilí\n<b>Klastr C</b>\n<b>Vyhýbavá</b>: Neustále si dělá starosti, chová se vyhýbavě, strach z odmítnutí, zároveň touží po blízkosti\n<b>Anankastická (obsedantně-kompulzivní)</b>: nadměrná pečlivost, neustále pochybuje, nadměrně opatrný\n<b>Závislá</b>: Značná nesamostatnost, zanedbává vlastní potřeby ve prospěch ostatních, snížená psychická odolnost\n<b>Pasivně agresivní</b>: Sklon k ustavičnému hněvu, silná sebestřednost, nedůvěřivost, odtažitost\n</string>
    <string name="person_lecba_text">Léčba spočívá v několika pilířích: psychoterapie (porozumění poruchy a sžít se s ní), socioterapie, osvojení sociálních dovedností, zajištění sociálních potřeb a rehabilitace. Dle příznaků může lékař předepsat i některé léky, nejšastěji antidepresiva, stabilizátory nálady nebo i antipsychotika.\n</string>
    <string name="priznaky">Příznaky</string>
    <string name="lecba">Léčba</string>

    <string name="ukoly">Úkoly\n Udělej tyto tři úkoly</string>
    <string name="ukoly_nav">Úkoly</string>
    <string name="splneno">Dobrá práce, splnil jsi všechny úkoly!</string>
    <string name="kontaky">Kontakty</string>
    <string name="text_lb">Linka bezpečí pomáhá dětem a studentům, kteří se nachází v náročné životní situaci nebo řeší starosti a problémy, se kterými si neví rady. Dostupné po celé České republice.\n</string>
    <string name="text_lpp">Linka první psychické pomoci má hned dvě linky, 116 000 slouží pro rodinu a školu. V případě rodiných problémů, potížích ve škole či dokonce při útěku nebo únosu dítěte vhodno využít tuto linku. Linka 116 123 poté slouží pro radu dospělým, kteří se snaží najít východisko ze situací, které nejsou schopni sami najít.\n</string>
    <string name="text_lpo">Slouží obětem kriminality a domácího násilí, nejen jeho přímými aktéry, ale také těm, kteří byly svědky tresntných činů nebo pozůstalým po obětech.\n</string>
    <string name="text_op">komplexní web k posilování duševního zdraví, zvládání a odolnosti, zřizuje Národní ústav duševního zdraví.\n</string>
    <string name="text_ter">Poskytování odborné psychické pomoci zdarma.\n</string>
    <string name="channel_name">channel1</string>
    <string name="channel_desc">channel one</string>
    <string name="title_activity_notification_fire">NotificationFire</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>