<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".AnxFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_anx_nadpis"
                style="@style/TextHeadStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/anx" />

            <TextView
                android:id="@+id/text_anx"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/anx_text" />

            <TextView
                android:id="@+id/text_anx_priznaky_nadpis"
                style="@style/TextHeadStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/priznaky" />

            <TextView
                android:id="@+id/text_anx_priznaky"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/anx_priznaky_text" />

            <TextView
                android:id="@+id/text_anx_lecba_nadpis"
                style="@style/TextHeadStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lecba" />

            <TextView
                android:id="@+id/text_anx_lecba"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/anx_lecba_text" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>