<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".DisFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_anx"
            style="@style/ButtonDisStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/anx"
            app:layout_constraintBottom_toTopOf="@+id/button_dep"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/disText" />

        <Button
            android:id="@+id/button_dep"
            style="@style/ButtonDisStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/dep"
            app:layout_constraintBottom_toTopOf="@+id/button_ed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_anx" />

        <Button
            android:id="@+id/button_ptsd"
            style="@style/ButtonDisStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/ptsd"
            app:layout_constraintBottom_toTopOf="@+id/button_bpd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_ed" />

        <Button
            android:id="@+id/button_bpd"
            style="@style/ButtonDisStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/bpd"
            app:layout_constraintBottom_toTopOf="@+id/button_schizo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_ptsd" />

        <Button
            android:id="@+id/button_person"
            style="@style/ButtonDisStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/person"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_schizo" />

        <Button
            android:id="@+id/button_schizo"
            style="@style/ButtonDisStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/schizo"
            app:layout_constraintBottom_toTopOf="@+id/button_person"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_bpd" />

        <TextView
            android:id="@+id/disText"
            style="@style/HeadStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poruchy"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:fontFamily="@font/amethysta"
            app:layout_constraintBottom_toTopOf="@+id/button_anx"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_ed"
            style="@style/ButtonDisStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/ed"
            app:layout_constraintBottom_toTopOf="@+id/button_ptsd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_dep" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>